<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/chat_profile_image"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/profileimage"
        android:src="@mipmap/icon"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="10dp" />

    <com.vanniktech.emoji.EmojiTextView
        android:id="@+id/chat_displayname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:text="@string/display_name1"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        tools:ignore="RelativeOverlap"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/chat_Lastseen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/chat_displayname"
        android:layout_below="@+id/chat_displayname"
        android:layout_marginTop="5dp"
        android:text="@string/last_seen"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:layout_alignLeft="@+id/chat_displayname" />

</RelativeLayout>