<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kiran.be_you.LoginActivity">

  <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints,NotSibling,UselessParent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">
         <ImageView
            android:id="@+id/beyou"
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/changeable"
            android:src="@mipmap/beyou" />
  </LinearLayout>

    <!--<android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/linearLayout"
        android:layout_margin="10dp"
        android:layout_marginTop="5dp"> -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:id="@+id/linearlayout1"
            android:orientation="vertical"
            android:layout_below="@+id/linearLayout"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                >

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/input_outline"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/input_outline"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/mybutton"
                android:text="@string/btn_login"
                android:textColor="@android:color/white" />
        </LinearLayout>
  <!--  </android.support.v7.widget.CardView>   -->


    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="300dp"
        android:layout_height="22dp"
        android:layout_below="@+id/linearlayout1"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />

        <!-- Link to Login Screen -->

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_below="@+id/btn_reset_password"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="15sp" />
  <!--  </LinearLayout>
  -->
</RelativeLayout>
